ollama-tiny/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:

      containers:
        - name: ollama
          image: ollama/ollama:latest
          ports:
            - containerPort: 11434
          volumeMounts:
            - name: ollama-data
              mountPath: /root/.ollama
          resources:
            requests:
              cpu: "1"
              memory: 1Gi
            limits:
              cpu: "6"
              memory: 2Gi

      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: ollama-data
